finish crud offers
update products api
